--- a/package.json
+++ b/package.json
@@ -8,13 +8,66 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/react": "11.5.0",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.3.0",
+    "@nrwl/next": "^13.4.1",
+    "add": "^2.0.6",
+    "core-js": "^3.6.5",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
+    "next-remote-watch": "^1.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
+  },
   "devDependencies": {
-    "@nrwl/tao": "13.4.1",
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@emotion/babel-plugin": "11.3.0",
     "@nrwl/cli": "13.4.1",
+    "@nrwl/cypress": "13.4.1",
+    "@nrwl/devkit": "13.4.1",
+    "@nrwl/eslint-plugin-nx": "13.4.1",
+    "@nrwl/jest": "13.4.1",
+    "@nrwl/linter": "13.4.1",
+    "@nrwl/react": "13.4.1",
+    "@nrwl/storybook": "13.4.1",
+    "@nrwl/tao": "13.4.1",
+    "@nrwl/web": "13.4.1",
     "@nrwl/workspace": "13.4.1",
+    "@storybook/addon-essentials": "~6.4.5",
+    "@storybook/builder-webpack5": "~6.4.5",
+    "@storybook/manager-webpack5": "~6.4.5",
+    "@storybook/react": "~6.4.5",
+    "@svgr/webpack": "^5.4.0",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "~5.3.0",
+    "@typescript-eslint/parser": "~5.3.0",
+    "babel-jest": "27.2.3",
+    "babel-loader": "8.1.0",
+    "cypress": "^9.1.0",
+    "eslint": "8.2.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "27.2.3",
+    "prettier": "^2.3.1",
+    "react-test-renderer": "17.0.2",
+    "ts-jest": "27.0.5",
     "typescript": "~4.4.3",
-    "prettier": "^2.3.1"
+    "url-loader": "^3.0.0"
   }
 }
