--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# local env files
+
+.env.local
+
 # compiled output
 /dist
 /tmp
