--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.5.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/server": "11.4.0",
-    "@emotion/styled": "11.3.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
     "@nrwl/next": "^13.4.1",
     "add": "^2.0.6",
     "core-js": "^3.6.5",
@@ -21,6 +24,7 @@
     "next-remote-watch": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
@@ -66,6 +70,7 @@
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3",
     "url-loader": "^3.0.0"
