--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "add": "^2.0.6",
     "core-js": "^3.6.5",
     "gray-matter": "^4.0.3",
+    "luxon": "^2.3.0",
     "next": "12.0.7",
     "next-mdx-remote": "^3.0.8",
     "next-remote-watch": "^1.0.0",
@@ -44,6 +45,8 @@
     "@nrwl/web": "13.4.1",
     "@nrwl/workspace": "13.4.1",
     "@storybook/addon-essentials": "~6.4.5",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/addon-storysource": "^6.4.9",
     "@storybook/builder-webpack5": "~6.4.5",
     "@storybook/manager-webpack5": "~6.4.5",
     "@storybook/react": "~6.4.5",
@@ -51,6 +54,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
+    "@types/luxon": "^2.0.8",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
