--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.2.6",
     "@nrwl/next": "^13.4.1",
     "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "gray-matter": "^4.0.3",
     "luxon": "^2.3.0",
@@ -53,6 +54,7 @@
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/classnames": "^2.3.1",
     "@types/jest": "27.0.2",
     "@types/luxon": "^2.0.8",
     "@types/node": "14.14.33",
