記事のページをひとまず完成

--- a/apps/blog-front/project.json
+++ b/apps/blog-front/project.json
@@ -19,8 +19,7 @@
       "executor": "@nrwl/next:server",
       "options": {
         "buildTarget": "blog-front:build",
-        "dev": true,
-        "customServerPath": "../../tools/next-watch-server/next-watch-server.ts"
+        "dev": true
       },
       "configurations": {
         "production": {
