--- a/apps/blog-front/project.json
+++ b/apps/blog-front/project.json
@@ -19,7 +19,8 @@
       "executor": "@nrwl/next:server",
       "options": {
         "buildTarget": "blog-front:build",
-        "dev": true
+        "dev": true,
+        "customServerPath": "../../tools/next-watch-server/next-watch-server.ts"
       },
       "configurations": {
         "production": {
