--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
     "@nrwl/next": "^13.4.1",
+    "@react-three/drei": "^8.3.1",
+    "@react-three/fiber": "^7.0.24",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
@@ -28,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "regenerator-runtime": "0.13.7",
+    "three": "^0.136.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -60,6 +63,7 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/three": "^0.136.1",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "babel-jest": "27.2.3",
@@ -74,6 +78,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
+    "next-transpile-modules": "^9.0.0",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
