--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "add": "^2.0.6",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
+    "framer-motion": "^5.5.7",
     "gray-matter": "^4.0.3",
     "luxon": "^2.3.0",
     "next": "12.0.7",
