--- a/libs/shared/mdx-elements/project.json
+++ b/libs/shared/mdx-elements/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/shared/mdx-elements",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/mdx-elements/src",
   "projectType": "library",
   "tags": [],
@@ -15,7 +15,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/shared/mdx-elements"],
       "options": {
-        "jestConfig": "libs/shared/mdx-elements/jest.config.js",
+        "jestConfig": "libs/shared/mdx-elements/jest.config.ts",
         "passWithNoTests": true
       }
     }
