--- a/package.json
+++ b/package.json
@@ -9,27 +9,29 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
+    "@emotion/react": "11.9.3",
     "@emotion/server": "11.4.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/styled": "11.9.3",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
-    "@nrwl/next": "^13.4.1",
+    "@nrwl/next": "14.4.3",
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
+    "@storybook/core-server": "6.4.22",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "framer-motion": "^5.5.7",
     "gray-matter": "^4.0.3",
     "luxon": "^2.3.0",
-    "next": "12.0.7",
+    "next": "12.1.6",
     "next-mdx-remote": "^3.0.8",
     "next-remote-watch": "^1.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
+    "react-is": "18.0.0",
     "regenerator-runtime": "0.13.7",
     "three": "^0.136.0",
     "tslib": "^2.0.0"
@@ -37,54 +39,53 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@emotion/babel-plugin": "11.3.0",
-    "@nrwl/cli": "13.4.1",
-    "@nrwl/cypress": "13.4.1",
-    "@nrwl/devkit": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/jest": "13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/react": "13.4.1",
-    "@nrwl/storybook": "13.4.1",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/web": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
-    "@storybook/addon-essentials": "~6.4.5",
+    "@emotion/babel-plugin": "11.9.2",
+    "@nrwl/cli": "14.4.3",
+    "@nrwl/cypress": "14.4.3",
+    "@nrwl/devkit": "14.4.3",
+    "@nrwl/eslint-plugin-nx": "14.4.3",
+    "@nrwl/jest": "14.4.3",
+    "@nrwl/linter": "14.4.3",
+    "@nrwl/react": "14.4.3",
+    "@nrwl/storybook": "14.4.3",
+    "@nrwl/web": "14.4.3",
+    "@nrwl/workspace": "14.4.3",
+    "@storybook/addon-essentials": "6.4.22",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/addon-storysource": "^6.4.9",
-    "@storybook/builder-webpack5": "~6.4.5",
-    "@storybook/manager-webpack5": "~6.4.5",
-    "@storybook/react": "~6.4.5",
+    "@storybook/builder-webpack5": "6.4.22",
+    "@storybook/manager-webpack5": "6.4.22",
+    "@storybook/react": "6.4.22",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/react": "13.3.0",
     "@types/classnames": "^2.3.1",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/luxon": "^2.0.8",
-    "@types/node": "14.14.33",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
     "@types/three": "^0.136.1",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
-    "babel-jest": "27.2.3",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
+    "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
-    "eslint-config-next": "12.0.7",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "27.2.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "27.5.1",
     "next-transpile-modules": "^9.0.0",
-    "prettier": "^2.3.1",
-    "react-test-renderer": "17.0.2",
+    "nx": "14.4.3",
+    "prettier": "2.7.1",
+    "react-test-renderer": "18.2.0",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.4.3",
+    "ts-jest": "27.1.4",
+    "typescript": "4.7.4",
     "url-loader": "^3.0.0"
   }
 }
