--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
+    "@next/mdx": "^12.2.3",
     "@nrwl/next": "14.4.3",
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
@@ -26,7 +27,7 @@
     "gray-matter": "^4.0.3",
     "luxon": "^2.3.0",
     "next": "12.1.6",
-    "next-mdx-remote": "^3.0.8",
+    "next-mdx-remote": "^4.0.3",
     "next-remote-watch": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
