--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "sharp": "^0.30.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
